ui alignment issue found, footer added, bootstrap code added in head

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,9 +8,11 @@ body {
 
 a {
   color: inherit;
-  text-decoration: none;
+  /* text-decoration: none; */
 }
 
 * {
+  padding: 0px;
+  margin: 0px;
   box-sizing: border-box;
 }
